# lol-serverless

./: .gitignore  Cargo.toml  README.md  build.rs  land-server.Dockerfile  land-worker.Dockerfile
.github/workflows/: ghcr.yaml  tests.yaml  unit-tests.yaml
crates/dao/: Cargo.toml
crates/dao/src/: deploy_task.rs  deploys.rs  envs.rs  lib.rs  playground.rs  projects.rs  settings.rs  tokens.rs  users.rs  wasm_artifacts.rs  workers.rs
crates/dao/src/migration/: m01_settings_table.rs  m02_user_table.rs  m03_user_token_table.rs  m03_usertoken_table.rs  m04_project_table.rs  m05_playground_table.rs  m06_deployment_table.rs  m06_deploys_table.rs  m07_deploy_state_table.rs  m07_deploystate_table.rs  m08_project_envs_table.rs  m08_projectenvs_table.rs  m09_wasm_artifacts_table.rs  m10_worker_node_table.rs  m11_deploy_task_table.rs  mod.rs
crates/dao/src/models/: deploy_state.rs  deploy_task.rs  deployment.rs  deploys.rs  mod.rs  playground.rs  prelude.rs  project.rs  project_envs.rs  settings.rs  user_info.rs  user_token.rs  wasm_artifacts.rs  worker_node.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: crypt.rs  lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/kernel/src/agent/: confs.rs  ip.rs  livings.rs  mod.rs  ping.rs
crates/kernel/src/deployer/: mod.rs  review.rs  waiting.rs
crates/kernel/src/storage/: fs.rs  mod.rs  s3.rs
crates/modules/: Cargo.toml
crates/modules/src/: examples.rs  lib.rs  memenvs.rs
crates/modules/src/storage/: fs.rs  mod.rs  s3.rs
crates/sdk/: Cargo.toml
crates/sdk-macro/: Cargo.toml
crates/sdk-macro/src/: http_handler.rs  lib.rs
crates/sdk/src/: body.rs  execution_ctx.rs  fetch.rs  http.rs  http_service.rs  lib.rs
crates/sdk/src/crypto/: hmac.rs  mod.rs  sha.rs
crates/service/: Cargo.toml
crates/service/src/: confs.rs  examples.rs  lib.rs  memenvs.rs  meta.rs  workerlivings.rs
crates/service/src/confs/: mod.rs  traefik.rs
crates/service/src/deployer/: mod.rs  review.rs  utils.rs  waiting.rs
crates/service/src/edgesyncer/: heartbeat.rs  mod.rs  tasks.rs
crates/service/src/storage/: fs.rs  mod.rs  s3.rs
crates/tplvars/: Cargo.toml
crates/tplvars/src/: deploy.rs  lib.rs  pagination.rs  project.rs  projects.rs  user.rs
crates/utils/: Cargo.toml
crates/utils/src/: crypt.rs  lib.rs  localip.rs  version.rs
crates/wasm-gen/: Cargo.toml  js-engine.wasm
crates/wasm-gen/engine/: js-engine.wasm
crates/wasm-gen/src/: lib.rs
crates/wasm-host/: Cargo.toml  build.rs
crates/wasm-host/src/: context.rs  ctx.rs  engine.rs  lib.rs  pool.rs  worker.rs
crates/wasm-host/src/hostcall/: asyncio.rs  body.rs  body_ctx.rs  client.rs  context.rs  ctx.rs  fetch.rs  host.rs  mod.rs
crates/wasm-host/wit/: http-handler.wit  http-service.wit  world.wit
crates/worker-server/: Cargo.toml
crates/worker-server/src/: handle.rs  lib.rs  middle.rs
land-cli/src/cmds/: build.rs
land-server/: Cargo.toml
land-server/src/: main.rs  server.rs  templates.rs
land-server/src/admin/: mod.rs  projects.rs
land-server/src/dash/: mod.rs  projects.rs
land-server/src/routers/: admin.rs  auth.rs  install.rs  mod.rs  project.rs  projects.rs  setting.rs  settings.rs  utils.rs
land-server/src/routers/worker_api/: mod.rs  task.rs
land-server/templates/: index.hbs  install.hbs  new.hbs  project-deployments.hbs  project-edit.hbs  project-settings.hbs  project.hbs  projects.hbs  sign-in.hbs
land-server/templates/admin/: index.hbs  project-details.hbs  projects.hbs  settings.hbs  workers.hbs
land-server/templates/components/: project-header.hbs
land-server/templates/partial/: deploys-list.hbs  head.hbs  js.hbs  pagination.hbs  project-header.hbs  sidebar.hbs  tokens.hbs  topnav.hbs
land-server/templates/static/: all.js  style.css
land-server/tpls/: index.hbs  new.hbs  projects.hbs  settings.hbs
land-server/tpls/admin/: general.hbs  index.hbs
land-server/tpls/partial/: sidebar.hbs
land-server/tpls/static/: style.css
land-worker/: Cargo.toml
land-worker/src/: main.rs
lib/common/: Cargo.toml
lib/common/src/: crypt.rs  lib.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs  memenvs.rs
lib/core/src/agent/: confs.rs  task.rs
lib/core/src/deployer/: review.rs  waiting.rs
lib/core/src/memenvs/: mod.rs
lib/dao/: Cargo.toml
lib/dao/src/: deploy_task.rs  deploys.rs  envs.rs  lib.rs  projects.rs
lib/sdk/: Cargo.toml
lib/sdk-macro/: Cargo.toml
lib/sdk-macro/src/: export_handler.rs  http_handler.rs  lib.rs
lib/sdk/src/: asyncio_service.rs  body.rs  execution_ctx.rs  export_service.rs  fetch.rs  http.rs  http_service.rs  lib.rs
lib/sdk/src/crypto/: hmac.rs  mod.rs
lib/vars/src/: project.rs
lib/wasm-gen/: Cargo.toml
lib/wasm-gen/engine/: js-engine.wasm
lib/wasm-gen/src/: lib.rs
lib/wasm-host/: Cargo.toml  build.rs
lib/wasm-host/src/: context.rs  engine.rs  worker.rs
lib/wasm-host/wit/: export-handler.wit  export-service.wit  http-handler.wit  http-service.wit
lib/wasm-server/: Cargo.toml
lib/wasm-server/src/: handle.rs  lib.rs
scripts/: land-server-deps.sh
src/: crypt.rs  logging.rs  main.rs  memenvs.rs  version.rs
src/cmds/: dashboard.rs  mod.rs  worker.rs
src/dashboard/: examples.rs  mod.rs  templates.rs
src/dashboard/routers/: admin.rs  auth.rs  index.rs  install.rs  mod.rs  projects.rs  settings.rs  worker_api.rs
src/dashboard/tplvars/: breadcrumb.rs  mod.rs  project.rs  user.rs
src/kernel/: mod.rs
src/worker_server/: handle.rs  mod.rs
templates/: admin.hbs  index.hbs  install.hbs  installed.hbs  project-list.hbs  project-new.hbs  project-settings.hbs  project-single.hbs  projects.hbs  settings.hbs  sign-in.hbs
templates/admin/: workers.hbs
templates/components/: admin-domains.hbs  admin-storage.hbs  project-header.hbs
templates/parts/: js.hbs  sidebar.hbs  tokens-list.hbs  topnav.hbs
templates/static/: main.js  style.css
tests/: test-js-files.sh  test_examples.sh
tests/fetch-sample/: fetch.txt
tests/hello-wasm/: Cargo.toml
tests/hello-wasm/src/: lib.rs
tests/wait-until/: Cargo.toml
tests/wait-until/src/: lib.rs
(+26 files in other folders)
