[workspace]
members = [
    "crates/dao",
    "crates/service",
    "crates/tplvars",
    "crates/utils",
    "crates/worker-server",
    "land-cli",
    "land-server",
    "land-worker",
]
default-members = ["land-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0-b2"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[workspace.dependencies]
# internal dependencies
land-dao = { path = "crates/dao" }
land-tplvars = { path = "crates/tplvars" }
land-utils = { path = "crates/utils" }
land-service = { path = "crates/service" }
land-worker-server = { path = "crates/worker-server" }

# thirdparty dependencies
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive", "env"] }
chrono = "0.4.38"
metrics = "0.24.0"
md5 = "0.7.0"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
] }
rust-embed = { version = "8.5.0", features = [
    "include-exclude",
    "compression",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "timeout",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "local-time",
    "env-filter",
] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
walkdir = "2.5.0"
