[workspace]
members = [
    "crates/dao",
    "crates/sdk",
    "crates/sdk-macro",
    "crates/service",
    "crates/tplvars",
    "crates/utils",
    "crates/wasm-gen",
    "crates/wasm-host",
    "crates/worker-server",
    "land-cli",
    "land-server",
    "land-worker",
]
default-members = ["land-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0-b5"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[workspace.dependencies]
# internal dependencies
land-dao = { path = "crates/dao" }
land-tplvars = { path = "crates/tplvars" }
land-utils = { path = "crates/utils" }
land-sdk = { path = "crates/sdk" }
land-sdk-macro = { path = "crates/sdk-macro" }
land-service = { path = "crates/service" }
land-wasm-gen = { path = "crates/wasm-gen" }
land-wasm-host = { path = "crates/wasm-host" }
land-worker-server = { path = "crates/worker-server" }

# thirdparty dependencies
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = "0.7.7"
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
chrono = "0.4.38"
http = "1.1.0"
metrics = "0.24.0"
md5 = "0.7.0"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
] }
rust-embed = { version = "8.5.0", features = [
    "include-exclude",
    "compression",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "timeout",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "local-time",
    "env-filter",
] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
walkdir = "2.5.0"
wasmtime = { version = "26.0.1", features = ["component-model", "async"] }
wasmtime-wasi = "26.0.1"
wasi-preview1-component-adapter-provider = "25.0.1"
wit-bindgen-core = "0.34.0"
wit-bindgen-rust = "0.34.0"
wit-bindgen = "0.34.0"
wit-component = "0.219.1"
