[package]
name = "land-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.4", features = ["cookie"] }
axum-htmx = "0.6.0"
axum-template = { version = "2.4.0", features = ["handlebars"] }
chrono = { workspace = true }
clap = { workspace = true }
gravatar = "0.2.0"
handlebars = "6.2.0"
http = { workspace = true }
land-dao = { workspace = true }
land-helpers = { workspace = true }
land-tplvars = { workspace = true }
land-modules = { workspace = true }
minify-html = "0.15.0"
rust-embed = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
