[package]
name = "land-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.5", features = ["cookie"] }
axum-htmx = "0.6.0"
axum-template = { version = "2.4.0", features = ["handlebars"] }
chrono = { workspace = true }
clap = { workspace = true }
gravatar = "0.2.0"
handlebars = "6.2.0"
htmlentity = "1.3.2"
land-dao = { workspace = true }
land-service = { workspace = true }
land-tplvars = { workspace = true }
land-utils = { workspace = true }
minify-html = "0.15.0"
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
