[package]
name = "land-dao"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcrypt = "0.15.1"
chrono = { workspace = true }
clap = { workspace = true }
land-utils = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
random_word = { version = "0.4.3", features = ["en"] }
sea-orm = { version = "1.1.0", default-features = false, features = [
    "with-chrono",
    "with-json",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
sea-orm-migration = "1.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
short-uuid = "0.1.3"
strum = { workspace = true }
tracing = { workspace = true }
