[package]
name = "land-dao"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sea-orm = { version = "1.1.0", default-features = false, features = [
    "with-chrono",
    "with-json",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
sea-orm-migration = "1.1.0"
tracing = { workspace = true }
