[package]
name = "land-tplvars"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
chrono = { workspace = true }
land-dao = { workspace = true }
land-helpers = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }