[package]
name = "land-tplvars"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
land-dao = { workspace = true }
land-utils = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
