[package]
name = "land-utils"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
hostname = "0.4.0"
md5 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple_crypt = "0.2.3"
