[package]
name = "land-wasm-gen"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
wasi-preview1-component-adapter-provider = "25.0.1"
which = "6.0.3"
wit-bindgen-core = "0.34.0"
wit-bindgen-rust = "0.34.0"
wit-component = "0.219.1"
