[package]
name = "land-wasm-host"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = "1.7.2"
bytesize = "1.3.0"
futures-util = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.2"
lazy_static = { workspace = true }
moka = { version = "0.12.8", features = ["sync"] }
once_cell = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { version = "25.0.2", features = ["component-model", "async"] }
wasmtime-wasi = "25.0.2"

[dev-dependencies]
land-wasm-gen = { workspace = true }

[build-dependencies]
land-wasm-gen = { workspace = true }
