[package]
name = "land-sdk"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
hmac = { version = "0.12.1" }
http = { workspace = true }
land-sdk-macro = { workspace = true }
lazy_static = { workspace = true }
matchit = "0.8.4"
sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
wit-bindgen = { workspace = true }

[features]
crypto = [] #["hmac", "sha2", "sha1"]
